minor refactoring to reverse a boolean and remove reference to get and remove operations that don't exist in some java versions for arraylists